add crud capabilities

--- a/docker-compose-postgres.yaml
+++ b/docker-compose-postgres.yaml
@@ -5,9 +5,9 @@ services:
     image: postgres:14-alpine
     ports:
       - 5432:5432
-#    volumes:
-#      - ~/apps/postgres:/var/lib/postgresql/data
+    volumes:
+      - ~/apps/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=sa
       - POSTGRES_USER=sa
-      - POSTGRES_DB=task_service_db
+      - POSTGRES_DB=async_task_service
